<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MySharedPrefActivity">

    <LinearLayout
        android:id="@+id/inputLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FDD835"
            android:gravity="center|top"
            android:paddingHorizontal="10dp"
            android:paddingVertical="10dp">

            <EditText
                android:id="@+id/editTextName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:hint="@string/key"
                android:singleLine="true"
                android:typeface="normal" />

            <EditText
                android:id="@+id/editTextValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:hint="@string/value"
                android:singleLine="true"
                android:typeface="normal" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawSelectorOnTop="true"
                android:entries="@array/mutableTypes" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttLayout"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:orientation="horizontal"
            android:background="#FDD835"
            android:gravity="center|top"
            android:padding="10dp">


            <Button
                android:id="@+id/clearButt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:text="@string/clear"

                />

            <Button
                android:id="@+id/addButt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:text="@string/add" />

            <Button
                android:id="@+id/sortButt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sort" />

        </LinearLayout>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="135dp"
        android:layout_marginRight="15dp"
        tools:listitem="@layout/list_item">

    </androidx.recyclerview.widget.RecyclerView>

</RelativeLayout>